--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-.var/
+*
+!README.md
+!early-init.el
+!init.el
+!.github/
+!.LICENSE
+!pre-early-init.el
+!post-early-init.el
+!pre-init.el
+!post-init.el
+!org-config.el
+!tex-config.el
+!tempel
